# plcc

./: .gitattributes  .gitignore  .gitpod.yml  .releaserc.yaml  .versionrc  AST.json  ASTroot.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.txt  disabled.gitpod.yaml  g  plcc.py  pyproject.toml  pytest.ini  release-image.yml  tests.sh
.claude/memory/: MEMORY.md  project_plcc_direction.md  project_plcc_ng_status.md  user_profile.md
.devcontainer/: devcontainer.Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: build.yaml  build_and_test.yaml  cd.yaml  ci.yaml  release.yaml  test-release-candidate.yaml  test-with-max-python-max-java.yaml  (+7 more)
.gitpod/: install-plcc.sh
.reuse/: dep5
Bash/: plcc  plccmk  rep
Batch/: parse.bat  plcc.bat  plccmk.bat  rep-t.bat  rep.bat  scan.bat
Dev/: build.sh  docker-compose.yml  release.sh  run.sh
Examples/: .bash_history  eee  foobar  print  this  tst
Std/: ILazy.java  IMatch.java  IScan.java  ITrace.java  Parser.java  Rep.java  Scan.java  Token.template
container/: build  docker-compose.yml  run
docs/: CHANGELOG.md  Contributing.md  Develop-in-GitPod.md  Developer.md  Maintainer.md  README.md
install/: install.bash
installer/: back  install.bash
release/: Dockerfile  build  docker-compose.yml  example.env  init  run
shell/: Dockerfile  docker-compose.yml  run  test.dockerfile
src/: VERSION  __main__.py  parse  parse.bat  plcc  plcc.bat  plcc.py  plccmk  plccmk.bat  rep  rep-t  rep-t.bat  rep.bat  scan  scan.bat
t/: g
tests/: run  run.bash
(+382 files in other folders)
